# myminixform

./: README.md  Template.yaml  form.xlsx  main.py  pyproject.toml  requirements.txt  setup.py
src/: expression.py  myminixform.py
